Code and Doc integration

--- a/js/inbrowser/benchmarks.html
+++ b/js/inbrowser/benchmarks.html
@@ -28,7 +28,7 @@
 
     })
 
-    // uniQ Test ============================================================
+    // UniQ Test ============================================================
     add.button('Run Uniq tests', async () => {
 
       add.p(`sending ${messageCount} messages through Q.push()`, { color: 'green' })
